2011-01-17  Ulrich Drepper  <drepper@gmail.com>

	* io/fcntl.h: Define AT_NO_AUTOMOUNT.

	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Define MADV_HUGEPAGE and
	MADV_NOHUGEPAGE.
	* sysdeps/unix/sysv/linux/ia64/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Likewise.

	* posix/getconf.c: Update copyright year.
	* catgets/gencat.c: Likewise.
	* csu/version.c: Likewise.
	* debug/catchsegv.sh: Likewise.
	* debug/xtrace.sh: Likewise.
	* elf/ldconfig.c: Likewise.
	* elf/ldd.bash.in: Likewise.
	* elf/sprof.c (print_version): Likewise.
	* iconv/iconv_prog.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.c: Likewise.
	* malloc/memusage.sh: Likewise.
	* malloc/mtrace.pl: Likewise.
	* nscd/nscd.c (print_version): Likewise.
	* nss/getent.c: Likewise.

	* sysdeps/unix/sysv/linux/bits/socket.h: Define AF_CAIF, AF_ALG,
	PF_CAIF, and PF_ALG.
	* sysdeps/unix/sysv/linux/sparc/bits/socket.h: Likewise.

2011-01-16  Andreas Schwab  <schwab@linux-m68k.org>

	* elf/Makefile (tlsmod17a-modules, tlsmod18a-modules): Define.
	(modules-names): Use them.
	(ifunc-test-modules, ifunc-pie-tests): Define.
	(extra-test-objs): Add tlsmod17a-modules, tlsmod18a-modules,
	tst-pie1, ifunc-test-modules and ifunc-pie-tests objects.
	(test-extras): Likewise.
	($(patsubst %,$(objpfx)%.os,$(tlsmod17a-modules))): Use
	$(compile-command.c).
	($(patsubst %,$(objpfx)%.os,$(tlsmod18a-modules))): Likewise.
	(all-built-dso): Define.
	(check-textrel.out, check-execstack.out): Depend on it.

	* configure.in: Don't override --enable-multi-arch.

2011-01-15  Ulrich Drepper  <drepper@gmail.com>

	[BZ #6812]
	* nscd/hstcache.c (tryagain): Define.
	(cache_addhst): Return tryagain not notfound for temporary errors.