@@ -1,4 +1,5 @@
-/* Copyright (C) 1991-1993,1995-2007,2009,2010 Free Software Foundation, Inc.
+/* Copyright (C) 1991-1993,1995-2007,2009,2010,2011
+   Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -337,7 +338,7 @@
 /* Major and minor version number of the GNU C library package.  Use
    these macros to test for features in specific releases.  */
 #define	__GLIBC__	2
-#define	__GLIBC_MINOR__	12
+#define	__GLIBC_MINOR__	13
 
 #define __GLIBC_PREREQ(maj, min) \
 	((__GLIBC__ << 16) + __GLIBC_MINOR__ >= ((maj) << 16) + (min))
